# word-app

./: .gitignore  main.py  pyproject.toml  requirements.txt  word_list.json
.github/workflows/: build.yml
